add support for servers, and other cleanup
